added initial materiel web components and fontawesome

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 tavernawebportal/node_modules
 tavernawebportal/.sass-cache
 tavernawebportal/misc.md
+tavernawebportal/fontawesome-5.0.0-rc4-linux
 rvm.sh
